dataset1235/2025-2/2868285114/users/2008605748/executions/2135592949_291286518.log
== SUBMISSION (2025-08-12 23:38:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:42)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:15:08)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:14:27)
-- CODE: 
#Use este codigo como ponto de partida
#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:13:36)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:39:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:13:08)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:38:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:13:54)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:27)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:13:44)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:14:38)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var= input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:13:35)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:12:09)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:38:48)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()

# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:15:44)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:59)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:14:04)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (VAR)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:38:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:13:54)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:15:45)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print (var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:36)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:39:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:14:17)
-- CODE: 
#Use este codigo como ponto de partida
#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (VAR)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:39:25)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:39:33)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:16:27)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print (var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:14:09)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (VAR)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:49)
-- CODE: 
# Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:16:26)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print (var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:39:26)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:14:18)
-- CODE: 
#Use este codigo como ponto de partida
#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (VAR)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (VAR)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:39:23)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:55)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var= input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 03:06:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print (num * 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:54)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:29)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:25)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:39:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:46)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:14:37)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:11:48)
-- CODE: 
# Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:06)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:14:27)
-- CODE: 
#Use este codigo como ponto de partida
#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:39:05)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var= input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:38:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 03:06:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print (num * 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:38:29)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:38:47)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()

# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:39:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:38:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:13:45)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print (var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print (var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:39:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.015
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 04:12:29)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:11:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
var = input()
# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 04:12:26)
-- CODE: 
#Use este codigo como ponto de partida

#Leitura de valores de entrada e conversao para inteiro
var = input( )
# Impressao do dobro do numero
Print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Print(var)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
